# deep_search-fsm

./: .gitignore  README.md  azure.env.example  pyproject.toml
evaluation/: run_eval.py
src/core/: __init__.py  config.py  jina.yaml
src/fsm/: __init__.py  actions.py  app.py
src/fsm/base_deepsearch/: actions.py  app.py  config.py  config.yaml  models.py  prompt.py  tools.py
src/fsm/v1_deepsearch/: actions.py  app.py  config.py  config.yaml  models.py  prompt.py  utils.py
src/models/: __init__.py  config.py  jina.py  llm.py
src/nlp/: __init__.py  pipes.py  tokenizer.py
src/prompts/: __init__.py  base.py
src/tools/: __init__.py  jina.py  utils.py  web_tool.py
